@@ -1,0 +1,4 @@
+db.url=jdbc:oracle:thin:@//localhost:1521/xe
+
+db.username=dspace
+db.password=dspace
